# nand-bch

./: .gitignore  CMakeLists.txt  CMakeSettings.json  bch.c  bch_codec.c  bch_decoder.c  bch_encoder_verify.c  bch_global.c  bch_test.cc  hexdump.cpp  libbch.c  libbch.h  nand-bch.cpp  nand_data.cpp  nuc970-bch.cpp  nuc970-bch.h  nuc970-data.h
rd1055_nand_flash_controller/rd1055/doc/: rd1055_readme.txt  revision_history.xlsx
rd1055_nand_flash_controller/rd1055/nand_model/: nand_defines.vh  nand_die_model.v  nand_model.v  nand_parameters.vh  readme.txt  subtest.vh  tb.do  tb.v  test.bat
rd1055_nand_flash_controller/rd1055/source/verilog/: MFSM.v  ebr_buffer.v
rd1055_nand_flash_controller/rd1055/source/vhdl/: ACounter.vhd  ErrLoc.vhd  H_gen.vhd  MFSM.vhd  TFSM.vhd  nfcm_top.vhd
rd1055_nand_flash_controller/rd1055/testbench/verilog/: flash_interface.v  nfcm_tb.v  test.bat
rd1055_nand_flash_controller/rd1055/testbench/vhdl/: flash_interface.vhd  nfcm_tb.vhd
reed-solomon/: CMakeLists.txt  correct-reed-solomon.h  decode.c  encode.c  field.h  polynomial.c  polynomial.h  reed-solomon.c  reed-solomon.h
verilog/BCH/: bch_encode.v  bch_error_dec.v  bch_error_one.v  bch_params.vh  bch_sigma_bma_parallel.v  config.vh  nuc970_decoder.v  nuc970_encode.v  xilinx_decoder.v  xilinx_encode.v
verilog/PUF/: buff.v  rom.v
verilog/sim/: encoder_tb.v  nuc970_decoder_tb.v  nuc970_encoder_tb.v  sim.v  tb_sim.v
x_bch/: BinaryMatrix.cpp  BinaryMatrix.h  GFMatrix.cpp  GFMatrix.h  GaloisField.cpp  GaloisField.h  ecclib.cpp  ecclib.h  lscript.ld  main.cc  main.h
(+35 files in other folders)
